--- a/.gitignore
+++ b/.gitignore
@@ -1982,3 +1982,4 @@ Ghost Hunter - EMF/Temp/UnityTempFile-f9a4863fc89bd124d92c1f8c875c471a
 Ghost Hunter - EMF/Temp/UnityTempFile-fb8ff97ac02547c4d94120f8d32d7ae2
 Ghost Hunter - EMF/Temp/UnityTempFile-fc3cd38b82a7b2b4e9bc205fd6f5dd15
 Ghost Hunter - EMF/Temp/UnityTempFile-fe597f7703408a744a55c017a3258de1
+Ghost Hunter - EMF/.vs/Ghost Hunter - EMF/v16/.suo
