--- a/.gitignore
+++ b/.gitignore
@@ -1984,3 +1984,10 @@ Ghost Hunter - EMF/Temp/UnityTempFile-fc3cd38b82a7b2b4e9bc205fd6f5dd15
 Ghost Hunter - EMF/Temp/UnityTempFile-fe597f7703408a744a55c017a3258de1
 Ghost Hunter - EMF/.vs/Ghost Hunter - EMF/v16/.suo
 Ghost Hunter - EMF/.vs/Ghost Hunter - EMF/v16/.suo
+Ghost Hunter - EMF/Library/gfu/cache/branches.yaml
+Ghost Hunter - EMF/Library/gfu/cache/gitlocks.yaml
+Ghost Hunter - EMF/Library/gfu/cache/gitlog.yaml
+Ghost Hunter - EMF/Library/gfu/cache/gitstatusentries.yaml
+Ghost Hunter - EMF/Library/gfu/cache/gittrackingstatus.yaml
+Ghost Hunter - EMF/Library/gfu/cache/repoinfo.yaml
+Ghost Hunter - EMF/Library/SourceAssetDB
